--- a/Fuentes/CovidExamenes/app/src/main/AndroidManifest.xml
+++ b/Fuentes/CovidExamenes/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SegundoActivity"></activity>
+        <activity android:name=".CuartoActivity"></activity>
+        <activity android:name=".TercerActivity" />
+        <activity android:name=".SegundoActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
