--- a/Fuentes/CovidExamenes/app/src/main/AndroidManifest.xml
+++ b/Fuentes/CovidExamenes/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CuartoActivity"></activity>
+        <activity android:name=".VerPacientesActivity"></activity>
+        <activity android:name=".CuartoActivity" />
         <activity android:name=".SegundoActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
